// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./NameInput.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root input mui-style-1c1lfd8-MuiFormControl-root-MuiTextField-root"
      data-mui-internal-clone-element="true"
      title=""
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined mui-style-ll8nw6-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_2_"
        id="_r_2_-label"
      >
        Owner name
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl mui-style-1pfp7cx-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input mui-style-1eoo0u4-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_2_"
          name="ownerName"
          type="text"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline mui-style-oct7z5-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-style-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Owner name
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NameInput.stories Disabled 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root input mui-style-1c1lfd8-MuiFormControl-root-MuiTextField-root"
      data-mui-internal-clone-element="true"
      title=""
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined mui-style-ll8nw6-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_5_"
        id="_r_5_-label"
      >
        Owner name
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl mui-style-1pfp7cx-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled mui-style-1eoo0u4-MuiInputBase-input-MuiOutlinedInput-input"
          disabled=""
          id="_r_5_"
          name="ownerName"
          type="text"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline mui-style-oct7z5-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-style-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Owner name
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NameInput.stories Required 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root input mui-style-1c1lfd8-MuiFormControl-root-MuiTextField-root"
      data-mui-internal-clone-element="true"
      title=""
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined mui-style-ll8nw6-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_8_"
        id="_r_8_-label"
      >
        Owner name
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk mui-style-1f718y-MuiFormLabel-asterisk"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl mui-style-1pfp7cx-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input mui-style-1eoo0u4-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_8_"
          name="ownerName"
          required=""
          type="text"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline mui-style-oct7z5-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-style-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Owner name
               
              *
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`./NameInput.stories WithPlaceholder 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root input mui-style-1c1lfd8-MuiFormControl-root-MuiTextField-root"
      data-mui-internal-clone-element="true"
      title=""
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined mui-style-ll8nw6-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="false"
        for="_r_b_"
        id="_r_b_-label"
      >
        Owner name
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl mui-style-1pfp7cx-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input mui-style-1eoo0u4-MuiInputBase-input-MuiOutlinedInput-input"
          id="_r_b_"
          name="ownerName"
          placeholder="Enter owner name"
          type="text"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline mui-style-oct7z5-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-style-1n64csd-MuiNotchedOutlined-root"
          >
            <span>
              Owner name
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
